@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-12T08:26:50Z",
-  "count_outdated" : 0,
-  "uniques_outdated" : 0,
+  "timestamp" : "2022-10-17T16:38:45Z",
+  "count_outdated" : 1,
+  "uniques_outdated" : 1,
   "count" : 3,
   "uniques" : 3,
   "clones" : [
-    {
-      "timestamp": "2022-10-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-12T00:00:00Z",
       "count": 2,
